# rss-reader

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tasks.py
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-dev.yml
backend/: .env.example  README.md  db.py  fetcher.py  handler.py  main.py  pyproject.toml  scheduler.py
backend/tests/: conftest.py  test_admin.py  test_articles.py  test_auth.py  test_db.py  test_feeds.py  test_fetcher.py
backend/tests/e2e/: conftest.py  test_admin.py  test_articles.py  test_auth.py  test_feeds.py  test_smoke.py
frontend/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: auth.setup.js  feeds.spec.js  helpers.js  smoke.spec.js  tooltip.spec.js
frontend/src/: App.jsx  index.css
frontend/src/components/: AddFeedDialog.jsx  AddFeedDialog.test.jsx  AdminPage.jsx  ArticleList.jsx  ArticleView.jsx  FeedSidebar.jsx  FeedSidebar.test.jsx  Layout.jsx  LoginPage.jsx  LoginPage.test.jsx  Logo.jsx
frontend/src/components/ui/: tooltip.jsx
frontend/src/lib/: api.js  api.test.js
infra/: README.md  app.py  cdk.json  pyproject.toml
infra/stacks/: rss_reader_stack.py
scripts/: setup-local.sh
