[project]
name = "rss-reader-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "sqlalchemy",
    "feedparser",
    "apscheduler",
    "authlib",
    "httpx",
    "python-dotenv",
    "python-jose[cryptography]",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov>=7.1.0",
    "ruff",
    "pip-audit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "W"]
ignore = [
    "B904",  # raise-without-from inside except — intentional: hides internal errors from HTTP responses
    "B008",  # function-call-in-default-argument — standard FastAPI Depends() pattern
    "S105",  # hardcoded-password-string — JWT_SECRET default is a visible dev placeholder, not a real secret
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S"]  # asserts and security rules are fine in tests

