[project]
name = "rss-reader-infra"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aws-cdk-lib>=2.100.0",
    "constructs>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "W"]
ignore = [
    "S101",  # asserts are fine in tests
]

[tool.ruff.lint.per-file-ignores]
"stacks/**/*.py" = ["I001"]  # aws_cdk submodule aliases don't sort cleanly with isort
